--- a/ecommerce2/src/Components/Screens/CartScreen.css
+++ b/ecommerce2/src/Components/Screens/CartScreen.css
@@ -57,3 +57,9 @@
     width: 100%;
     font-family:Arial, Helvetica, sans-serif;
 }
+
+@media (max-width: 430px) {
+    .cart img {
+        width: 90%;
+    }
+}
