--- a/ecommerce2/src/Components/product.css
+++ b/ecommerce2/src/Components/product.css
@@ -79,3 +79,125 @@
     color: black;
     font-family: Lato;
 }
+
+
+
+@media (max-width: 1400px) {
+    .products-container1 {
+        max-width: 1100px;
+    }
+
+    .Product {
+        min-height: 21em;
+    }
+}
+
+@media (max-width: 1200px) {
+    .products-container1 {
+        max-width: 1000px;
+    }
+
+
+}
+
+
+@media (max-width: 1050px) {
+    .products-container1 {
+        grid-template-columns: 1fr 1fr 1fr ;
+    }
+
+    .products-container1 {
+        max-width: 700px;
+    }
+
+
+}
+
+
+@media (max-width: 768px) {
+    .products-container1 {
+        grid-template-columns: 1fr 1fr ;
+    }
+
+    .products-container1 {
+        max-width: 500px;
+    }
+
+}
+
+
+@media (min-width: 768px) {
+    #sneakers {
+        margin-bottom: 80px;
+    }
+}
+
+@media (min-width: 1050px) {
+    #sneakers {
+        margin-bottom: 0px;
+    }
+}
+
+
+
+@media (max-width: 550px) {
+    .products-container1 {
+        grid-template-columns: 1fr ;
+    }
+
+    .products-container1 {
+        max-width: 290px;
+    }
+}
+
+@media (max-width: 330px) {
+    .products-container1 {
+        max-width: 220px;
+    }
+}
+
+@media (max-width: 240px) {
+    .products-container1 {
+        max-width: 180px;
+    }
+}
+
+@media (max-width: 600px) {
+    .products-container2 {
+        grid-template-columns: 1fr!important;
+    }
+
+    .Product3 img {
+        width: 300px;
+    }
+
+    .Product3 {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .linkStyle {
+         margin-top: 0px; 
+        margin-bottom: 0px; 
+    }
+
+}
+
+@media (max-width: 350px) {
+ .Product3 {
+    padding: 0rem;
+ }
+}
+
+@media (max-width: 310px) {
+    .Product3 img {
+        width: 200px;
+    }
+}
+
+@media (max-width: 270px) {
+    .Product3 img {
+        width: 170px;
+    }
+}
