--- a/ecommerce2/src/Components/Screens/EditAccountScreen.css
+++ b/ecommerce2/src/Components/Screens/EditAccountScreen.css
@@ -56,6 +56,7 @@
     padding: 10px;
     background-color: white;
     border: 1px solid black;
+    color: black;
     width: 100px;
     cursor: pointer;
 }
