--- a/ecommerce2/src/Components/Screens/ProductScreen.css
+++ b/ecommerce2/src/Components/Screens/ProductScreen.css
@@ -109,6 +109,7 @@
     padding: 16px;
     font-family: Lato;
     background-color: #EAEAEA;
+    color: black;
     border: 0;
     cursor: pointer;
     margin-top: 20px;
