--- a/ecommerce2/src/Components/logo.css
+++ b/ecommerce2/src/Components/logo.css
@@ -1,3 +1,6 @@
+/* used on older version of project, no longer in production */ 
+
+
 .Logo {
     color: #fffafa;
     font-family: 'Playfair Display', serif;
